components/navbars/styles/DesktopNavBar.module.scss
@import "../../layouts/styles/PageLayout.module.scss";

.navbar {
  &_fixed {
    @extend .navbar;

    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 100;
  }

  background-color: #ffffff73;
  backdrop-filter: blur(4px);
  border-bottom: 1px solid #ffffff3b;

  &_content {
    @extend %pagePaddingX;
    display: flex;
    justify-content: space-between;
  }

  &_button {
    cursor: pointer;
    padding: .3rem;
    font-size: 1rem;
    display: flex;
    align-items: center;

    &Icon {
      margin-right: 1rem;
      width: 1rem;
      height: 1rem;
    }

    &Text {
      display: flex;
      align-items: center;
      color: var(--text-color);
      transition: 0.3s;

      &_white {
        color: white;
      }

      &:hover {
        color: var(--color-primary);
      }
    }

    &List {
      @include isMobile {
        display: none;
      }

      display: flex;
      justify-content: space-between;
      list-style: none;

      &Mobile {
        list-style: none;
        padding-right: 10rem;
      }
    }
  }

  &_hamburgerMenu {
    all: unset;
    color: var(--text-color);
    font-size: 2rem;
    display: flex;
    align-items: center;

    @media (min-width: $sm) {
      display: none;
    }

    &_close {
      @extend .navbar_hamburgerMenu;
      width: 75%;
      display: flex;
      margin-top: 1rem;
      justify-content: flex-end;
    }
  }

  &_mobileNavBar {
    position: fixed;
    z-index: 10000;
    

    &_bg {
      position: fixed;
      inset: 0;
      backdrop-filter: blur(2px);
    }

    &_content {
      position: fixed;
      background-image: linear-gradient(
        0deg,
        #abb6c1,
        var(--color-surface),
        white
      );
      inset: 0;
      height: 100vh;
      box-shadow: -10px 0px 100px #3d4247;
    }
  }
}

